[package]
name = "tdbtk"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies.anyhow]
version = "1.0.75"

[dependencies.binrw]
version = "0.13.1"

[dependencies.iref]
version = "3.1.3"

[dependencies.miniz_oxide]
version = "0.7.1"

[dependencies.positioned-io]
version = "0.3.3"

[dependencies.thiserror]
version = "1.0.50"

[dependencies.walkdir]
version = "2.4.0"
