[package]
name = "tdbtk"
version = "0.1.0"
edition = "2021"
autotests = false

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies.anyhow]
version = "1.0.75"

[dependencies.binrw]
version = "0.13.1"

[dependencies.iref]
version = "3.1.3"

[dependencies.lzzzz]
version = "1.0.4"

[dependencies.miniz_oxide]
version = "0.7.1"

[dependencies.positioned-io]
version = "0.3.3"

[dependencies.rand]
version = "0.8.5"

[dependencies.thiserror]
version = "1.0.50"

[dependencies.walkdir]
version = "2.4.0"

[dependencies.zstd-safe]
version = "7.0.0"
